--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Javascript + DOM</title>
+	<title>To-Do List</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1>Shopping List</h1>
-	<p id="first">Get it done today</p>
+	<h1>To-Do List</h1>
+	<p id="first">Get it done today!!</p>
 	<input id="userinput" type="text" placeholder="enter items">
 	<button id="enter">Enter</button>
 	<ul>
